<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Newpsel</string>

    <!-- Sign up -->
    <string name="label_signup">Sign up</string>
    
    <!-- Sign in -->
    <string name="label_signin">Sign in</string>
    
    <!-- Add feed -->
    <string name="label_add_feed">Add feed</string>
    <string name="label_labels_list">Labels</string>
    <string name="label_labels_create">Create Label</string>
    
    <!-- Action -->
    <string name="action_about">About</string>
    <string name="action_create_feed">Create Feed</string>
    <string name="action_save">Save</string>
    <string name="action_labels">Labels</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_drop_db">Drop DB</string>
    <string name="action_check">Check this</string>

    <!-- Text -->
    <string name="create_feed">Create feed</string>
    <string name="Feed">Feed</string>
    <string name="Feeds">Feeds</string>
    <string name="feed_list_empty">You do not have feeds</string>
    <string name="Title">Title</string>
    <string name="try_later">Try again in few minutes</string>
    
    <!-- Error -->
    <string name="error_304">Username already exists</string>
    <string name="error_305">Email already exists</string>
    <string name="error_306">Wrong feed url</string>
    <string name="error_310">Try again later</string>
    <string name="error_311">Username is required!</string>
    <string name="error_312">Email is required!</string>
    <string name="error_313">Password is required!</string>
    
    <!-- Text -->
    <string name="error_connection">No connection to Internet</string>
    <string name="error_unknown">Error: Unknown error (see log)</string>
    <string name="error_http_unauthorized">Error: 401 unauthorized</string>
    <string name="error_http_forbidden">Error: 403 forbidden</string>
    <string name="error_http_not_found">Error: 404 not found</string>
    <string name="error_http_server_error">Error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: Please enable external API access in tt-rss Settings - Advanced</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="error_network_unavailable">Error: network unavailable</string>

    <!-- VIEWS -->
    <!-- Main -->
    <string name="button_sync">sync</string>
    <string name="button_mark_all">all as read</string>
    <string name="button_add_feed">add feed</string>
    <string name="sync_finished">Sync finished</string>
    <string name="button_share">Share</string>
    <string name="no_feeds">No feeds</string>
    <!-- Drawer -->
    <string-array name="feeds_list_array">
        <item>Unread</item>
        <item>All</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <!-- Forms -->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_url">Url</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_submit">Submit</string>
    
    <!-- Feed's items -->
    <string name="color_read">#d3d3d3</string>
    <string name="color_unread">#f9f9f9</string>
    <string name="feed_title">Feed</string>
    <string name="is_stared">is stared</string>
    <string name="is_unread">is unread</string>
    <string name="has_label">has label</string>
    <!-- Context menu -->
    <string name="cm_mark_read">Mark as read</string>
    <string name="cm_mark_unread">Mark as unread</string>
    <string name="cm_mark_previous">Mark previous as read</string>
    <string name="cm_add_star">Add star</string>
    <string name="cm_remove_star">Remove star</string>
    <string name="cm_share">Share</string>
    
    <!-- About -->
    <string name="about_label">About</string>
    <string name="about_nps">Newpsle is under development and currently it\'s in alpha version. It will have different futures with which you will spend less time selecting preferred news and save/share them. So for now Newpsel is simple RSS feeds reader but soon will come future functionality.</string>
    <string name="about_version">Current version: </string>
    <string name="about_status">(alpha)</string>
    <string name="about_web">Web:</string>
    <string name="app_web_url">www.newpsel.com</string>
    <string name="about_author">Author:</string>
    <string name="about_author_name">Denys Pasishnyi (@dpcat237)</string>
    <string name="about_write">Email:</string>
    <string name="about_email">newpsel@gmail.com</string>
    
    <!-- Labels -->
    <string name="button_create_label">create feed</string>
    <string name="txt_already_has_label">This item already has label</string>
    <string name="txt_successful_set_label">Set label</string>
    
    <!-- Settings -->
    <string name="label_st">Settings</string>
    <string name="st_design">Design</string>
    <string name="st_text_size">Text size</string>
    <string name="st_text_size_s">Adjust size of article text</string>
    <string-array name="st_text_size_list_titles">
        <item>Smallest</item>
        <item>Smaller</item>
        <item>Normal</item>
        <item>Larger</item>
        <item>Largest</item>
    </string-array>
    <string-array name="st_text_size_list_values">
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>
    <string name="st_list_size">List size</string>
    <string name="st_list_size_s">Adjust size of list text</string>
    <string-array name="st_list_size_list_titles">
        <item>Smaller</item>
        <item>Normal</item>
        <item>Larger</item>
    </string-array>
    <string-array name="st_list_size_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>