<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenu" >

    <item android:id="@+id/buttonSync"
          android:icon="@drawable/actionbar_refresh"
          android:title="@string/button_sync"
          android:showAsAction="ifRoom|withText"  />
    
    <item android:id="@+id/buttonAddFeed"
          android:icon="@drawable/actionbar_add"
          android:title="@string/button_add_feed"
          android:showAsAction="ifRoom|withText"  />
    
    <item
        android:id="@+id/buttonActionLabels"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_labels" />
    
    <item
        android:id="@+id/buttonActionSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/actionLogout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout" />
    
    <item
        android:id="@+id/buttonAbout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />

</menu>