<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">
 
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="text"
        android:hint="@string/hint_username" />
    
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />
     
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/hint_password" />
     
    <Button android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="doSignUp"/>

    <!-- <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView
	        android:id="@+id/textViewaa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" />
    </ScrollView> -->
   

</LinearLayout>